# glados

./: .gitattributes  .gitignore  Makefile  README.md  cabal.project  flake.nix  glados.cabal
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 01_epic.yml  02_story.yml  03_task.yml  addon_checklist.yml  epic.yml  sub_issue.yml
.github/workflows/: build.yml  codecov.yaml  issue-linker.yml  mirror_commit.yaml  pr-labelers.yml
ast/: ast.cabal
ast/src/: AST.hs  ImperativeAST.hs  SexprtoAST.hs
ast/src/AST/: Lisp.hs  Types.hs
ast/src/AST/Lisp/: AST.hs  SexprtoAST.hs
ast/src/AST/Types/: AST.hs  Common.hs  Literal.hs  Operator.hs  Type.hs
ast/tests/: Spec.hs  SpecAST.hs  SpecImperativeAST.hs  SpecLisp.hs  SpecLispAST.hs  SpecLispSexprtoAST.hs  SpecSexprtoAST.hs
cabal-extract/: Main.hs  cabal-extract.cabal
cli/: cli.cabal
compiler/: compiler.cabal
compiler/src/: Main.hs
docs/: README.md  astro.config.mjs  quant.bnf  quant.tmLanguage.json
docs/src/content/docs/: index.mdx
docs/src/content/docs/guides/: arrays.md  control-flow.md  getting-started.md  language-basics.md
docs/src/content/docs/poc/: parser.md
docs/src/content/docs/reference/: operators.md  types.md
docs/src/content/docs/studies/: doc.md  parser.md  persistence.md  vm.md  vulnerabilities.md
docs/src/content/docs/tools/: editor-support.md  formatter.md
eval/: eval.cabal
eval/src/: Evaluator.hs
eval/tests/: Spec.hs  SpecComplexExamples.hs  SpecEvaluator.hs
extension/emacs/: README.md  config.el  packages.el  quant-mode.el
extension/tree-sitter-quant/: README.md  grammar.js  jsconfig.json  package.json
extension/tree-sitter-quant/examples/: arrays.qa  factorial.qa  syntax.qa
extension/tree-sitter-quant/queries/: folds.scm  highlights.scm  indents.scm  locals.scm
extension/vim/: README.md
extension/vim/ftdetect/: quant.vim
extension/vim/syntax/: quant.vim
extension/vscode/quant-extension/: LICENSE  README.md  package.json  quant-1.0.0.vsix
extension/vscode/quant-highlighter/: CHANGELOG.md  README.md  language-configuration.json  package.json
extension/vscode/quant-highlighter/snippets/: quant.json
extension/vscode/quant-highlighter/syntaxes/: quant.tmLanguage.json
formatter/: LICENSE  README.md  formatter.cabal  quantfmt.example.toml  quantfmt.toml
formatter/app/: Main.hs
formatter/src/: Formatter.hs
formatter/tests/: Spec.hs  SpecConfig.hs  SpecFormatter.hs
lisp/: Main.hs  bootstrap.ghci  lisp.cabal
lisp/src/: Ast.hs  Bootstrap.hs  Builtins.hs  Evaluator.hs  Lisp.hs  Main.hs  SexprtoAST.hs
lisp/src/parsing/: Parser.hs  SExpr.hs
lisp/tests/: ComplexExamplesSpec.hs  EvaluatorSpec.hs  IntegrationSpec.hs  LispAstSpec.hs  LispBootstrapSpec.hs  LispSpec.hs  Main.hs  SpecIntegration.hs  SpecParser.hs
parser/: parser.cabal
parser/app/: Main.hs
parser/src/: Error.hs  Lexer.hs  Lib.hs  Parser.hs  Tokens.hs
parser/src/Parser/: Decl.hs  Expr.hs  Import.hs  LValue.hs  Literal.hs  Operator.hs  Stmt.hs  Type.hs  Utils.hs
parser/tests/: Spec.hs  SpecError.hs  SpecLexer.hs  SpecLib.hs  SpecTokens.hs
parser/tests/Parser/: SpecDecl.hs  SpecExpr.hs  SpecImport.hs  SpecLValue.hs  SpecLitterals.hs  SpecOperator.hs  SpecStmt.hs  SpecTypes.hs  SpecUtils.hs
poc/: MegaparsecPoC.hs  ParsecPoC.hs  SpecMegaparsec.hs  SpecParsec.hs  poc.cabal  poc.md
repl/: repl.cabal
repl/app/: Main.hs
repl/src/: Repl.hs
repl/test/: Spec.hs
scripts/: apply-commit-convention.py  coverage_manager.py  parse_cabal.py
std/: README.md  array.qa  io.qa  math.qa  string.qa  sys.qa
tests/: array.qa  error_char.c  error_comment.c  error_string.c  nested_elif.qa  nth_prime.qa  valid_basic.c  valid_operators.c
tests/std/: examples.qa  test_stdlib.py
