cabal-version: 3.8
name:          ast
version:       0.1.0
build-type:    Simple
description:   Generic Language and data operand syntax
homepage:      https://github.com/Sigmapitech/glados
bug-reports:   https://github.com/Sigmapitech/glados/issues
author:        Sigmapitech
maintainer:    Sigmapitech
copyright:     Sigmapitech
license:       BSD-2-Clause
license-file:  LICENSE

common lang
  default-language: Haskell2010

common warnings
  ghc-options: -Wall -Wextra -Wredundant-constraints -Wname-shadowing

common release
  ghc-options: -O2

library
  import:             lang
  import:             warnings
  default-extensions:
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    GeneralizedNewtypeDeriving
    OverloadedStrings
    StrictData

  exposed-modules:
    AST.Types
    AST.Types.AST
    AST.Types.Common
    AST.Types.Literal
    AST.Types.Operator
    AST.Types.Type

  hs-source-dirs:     src
  build-depends:
    , base
    , bytestring
    , containers
    , hashable
    , text

library ast-lisp
  import:             lang
  import:             warnings
  visibility:         public
  default-extensions: GeneralizedNewtypeDeriving
  exposed-modules:
    AST.Lisp
    AST.Lisp.AST
    AST.Lisp.SexprtoAST

  hs-source-dirs:     src
  build-depends:
    , base
    , mtl

test-suite ast-test
  import:             lang
  import:             warnings
  default-extensions:
    GeneralizedNewtypeDeriving
    OverloadedStrings

  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  hs-source-dirs:     tests
  other-modules:      SpecAST
  build-depends:
    , ast
    , base                >=4.7 && <5
    , directory
    , hspec
    , hspec-expectations
    , QuickCheck

test-suite ast-lisp-test
  import:             lang
  import:             warnings
  default-extensions:
    GeneralizedNewtypeDeriving
    OverloadedStrings

  type:               exitcode-stdio-1.0
  main-is:            SpecLisp.hs
  hs-source-dirs:     tests
  other-modules:
    SpecLispAST
    SpecLispSexprtoAST

  build-depends:
    , ast:ast-lisp
    , base                >=4.7 && <5
    , hspec
    , hspec-expectations
