cabal-version: 3.8
name:          parser
version:       0.1.1
build-type:    Simple
description:   Generic Language and data operand syntax
homepage:      https://github.com/Sigmapitech/glados
bug-reports:   https://github.com/Sigmapitech/glados/issues
author:        Sigmapitech
maintainer:    Sigmapitech
copyright:     Sigmapitech
license:       BSD-2-Clause
license-file:  LICENSE

common lang
  default-language: Haskell2010

common warnings
  ghc-options: -Wall -Wextra -Wredundant-constraints -Wname-shadowing

common release
  ghc-options: -O2

library
  import:          lang
  import:          warnings
  hs-source-dirs:  src
  exposed-modules:
    Error
    Lexer
    Lib
    Parser
    Tokens

  build-depends:
    , ast:ast-lisp
    , base
    , megaparsec
    , text

executable parser-exe
  import:         lang
  import:         warnings
  import:         release
  main-is:        Main.hs
  hs-source-dirs: app
  build-depends:
    , base
    , parser

  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

test-suite parser-test
  import:         lang
  import:         warnings
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  hs-source-dirs: tests
  other-modules:
    SpecError
    SpecLexer
    SpecLib
    SpecTokens

  build-depends:
    , ast:ast-lisp
    , base
    , hspec
    , megaparsec
    , parser
    , silently
