cabal-version: 3.8
name:          parser
version:       0.1.1
build-type:    Simple
description:   Generic Language and data operand syntax
homepage:      https://github.com/Sigmapitech/glados
bug-reports:   https://github.com/Sigmapitech/glados/issues
author:        Sigmapitech
maintainer:    Sigmapitech
copyright:     Sigmapitech
license:       BSD-2-Clause
license-file:  LICENSE

common lang
  default-language: Haskell2010

common warnings
  ghc-options: -Wall -Wextra -Wredundant-constraints -Wname-shadowing

common release
  ghc-options: -O2

common extensions
  default-extensions: OverloadedStrings

library
  import:          lang
  import:          warnings
  import:          extensions
  hs-source-dirs:  src
  exposed-modules:
    Error
    Lexer
    Lib
    Parser
    Parser.Decl
    Parser.Expr
    Parser.Literal
    Parser.LValue
    Parser.Operator
    Parser.Stmt
    Parser.Type
    Parser.Utils
    Tokens

  build-depends:
    , ast
    , base
    , containers
    , megaparsec
    , text

executable parser-exe
  import:         lang
  import:         warnings
  import:         extensions
  import:         release
  main-is:        Main.hs
  hs-source-dirs: app
  build-depends:
    , base
    , parser
    , text

  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

test-suite parser-test
  import:         lang
  import:         warnings
  import:         extensions
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  hs-source-dirs: tests
  other-modules:
    Parser.SpecDecl
    Parser.SpecExpr
    Parser.SpecLitterals
    Parser.SpecLValue
    Parser.SpecOperator
    Parser.SpecStmt
    Parser.SpecTypes
    Parser.SpecUtils
    SpecError
    SpecLexer
    SpecLib
    SpecTokens

  build-depends:
    , ast
    , base
    , hspec
    , megaparsec
    , parser
    , silently
    , text
