cabal-version: 3.8
name:          repl
version:       1.0.0
build-type:    Simple
description:   Interactive REPL for GLaDOS interpreter
homepage:      https://github.com/Sigmapitech/glados
bug-reports:   https://github.com/Sigmapitech/glados/issues
author:        Sigmapitech
maintainer:    Sigmapitech
copyright:     Sigmapitech
license:       BSD-2-Clause
license-file:  LICENSE

common lang
  default-language: Haskell2010

common warnings
  ghc-options: -Wall -Wextra -Wredundant-constraints -Wname-shadowing

common release
  ghc-options: -O2

library
  import:             lang
  import:             warnings
  exposed-modules:    Repl
  default-extensions:
    GeneralizedNewtypeDeriving
    LambdaCase
    OverloadedStrings

  hs-source-dirs:     src
  build-depends:
    , base
    , haskeline
    , parser

executable glados-repl
  import:         lang
  import:         warnings
  import:         release
  main-is:        Main.hs
  hs-source-dirs: app
  build-depends:
    , base
    , repl

  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
